[gd_scene load_steps=8 format=3 uid="uid://dq5ftmmtapqpg"]

[ext_resource type="Texture2D" uid="uid://chg6fuv5n6j8b" path="res://art/enemyFlyingAlt_1.png" id="1_3nh7u"]
[ext_resource type="Script" path="res://units/mob.gd" id="1_ebpeh"]
[ext_resource type="Texture2D" uid="uid://dn1k20w8iy55u" path="res://art/enemyFlyingAlt_2.png" id="2_cndcs"]
[ext_resource type="PackedScene" uid="uid://dheuhn4kvwdb4" path="res://hud/hp_bar.tscn" id="8_2ykid"]
[ext_resource type="PackedScene" uid="uid://cj1uchh01eyqh" path="res://logic/hp_controller.tscn" id="9_0kf8y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x1lww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3nh7u")
}, {
"duration": 1.0,
"texture": ExtResource("2_cndcs")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0flk4"]
radius = 31.8247
height = 72.5474

[node name="Mob" type="CharacterBody2D" groups=["Mob"]]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_ebpeh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x1lww")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 2
position = Vector2(10, -9.53674e-07)
rotation = 0.565487
shape = SubResource("CapsuleShape2D_0flk4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(12, 0)
scale = Vector2(2.6, 3.6)

[node name="HpBar" parent="." instance=ExtResource("8_2ykid")]
offset_left = -49.0
offset_top = -84.0
offset_right = 217.0
offset_bottom = -34.0
scale = Vector2(0.4, 0.25)

[node name="HpController" parent="." instance=ExtResource("9_0kf8y")]

[connection signal="hp_zero" from="HpController" to="." method="_on_hp_controller_hp_zero"]
